--- a/blocks/card/__caption/card__caption.css
+++ b/blocks/card/__caption/card__caption.css
@@ -1,6 +1,12 @@
 .card__caption {
   display: flex;
   justify-content: space-between;
-  margin: 21px 25px 15px 31px;
   align-items: baseline;
+  min-height: 80px;
+}
+
+@media screen and (max-width: 460px){
+  .card__caption {
+    min-height: 79px;
+  }
 }
