--- a/blocks/cards/__list/cards__list.css
+++ b/blocks/cards/__list/cards__list.css
@@ -1,7 +1,7 @@
 .cards__list {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
-  grid-gap: 17px;
+  grid-gap: 20px 17px;
   list-style-type: none;
   padding: 0;
   margin: 0;
