--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -9,3 +9,9 @@
   cursor: pointer;
   padding: 0;
 }
+
+@media screen and (max-width: 460px){
+  .profile__add-button {
+    background-size: 5.75%;
+  }
+}
