--- a/blocks/profile/__title-container/profile__title-container.css
+++ b/blocks/profile/__title-container/profile__title-container.css
@@ -1,10 +1,13 @@
 .profile__title-container {
   display: flex;
   align-items: baseline;
+  padding-bottom: 16px;
+
 }
 
 @media screen and (max-width: 600px) {
   .profile__title-container {
     justify-content: center;
+    padding-bottom: 9px;
   }
 }
