--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -3,7 +3,7 @@
   font-size: 42px;
   line-height: 48px;
   margin: 0;
-  padding-bottom: 16px;
+  display: inline-flex;
 }
 
 @media screen and (max-width: 600px) {
