--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -3,17 +3,18 @@
   background: white;
   border-radius: 10px;
   width: 430px;
-  min-height: 330px;
   z-index: 15;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
   box-sizing: border-box;
-  padding: 34px 36px 36px;
+  padding: 28px 36px 42px;
+  margin-top: 201px;
 }
 
 @media screen and (max-width: 600px){
   .popup__container {
+    margin-top: 0;
+    margin-bottom: 69px;
     width: 282px;
-    min-height: 322px;
     padding: 25px 22px;
   }
 }
