--- a/blocks/popup/__input/__input.css
+++ b/blocks/popup/__input/__input.css
@@ -1,11 +1,12 @@
-.popup__form-user-name {
+.popup__input {
+  display: flex;
+  justify-items: end;
   min-height: 27px;
   color: black;
   font-size: 14px;
   line-height: 17px;
-  padding-bottom: 13px;
+  padding: 0 0 3px;
+  margin-bottom: 26px;
   border: none;
   border-bottom: solid 1px rgba(0, 0, 0, 0.2);
-  margin-bottom: 30px;
 }
-
