--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -6,8 +6,13 @@
   top: 0;
   width: 100%;
   height: 100%;
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+}
+
+@media screen and (max-width: 600px) {
+  .popup {
+    justify-content: center;
+  }
 }
