--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -8,8 +8,12 @@
   min-height: 50px;
   cursor: pointer;
   padding: 0;
+  transition: opacity 0.3s;
 }
 
+.profile__add-button:hover {
+  opacity: 0.8;
+}
 @media screen and (max-width: 460px){
   .profile__add-button {
     background-size: 5.75%;
