--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -2,8 +2,18 @@
   margin: 0;
   font-size: 18px;
   line-height: 22px;
+  max-width: 550px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  display: inline-block;
 }
 
+@media screen and (max-width: 930px) {
+  .profile__subtitle {
+    width: 50vw;
+  }
+}
 
 @media screen and (max-width: 600px) {
   .profile__subtitle {
@@ -11,5 +21,7 @@
     line-height: 17px;
     text-align: center;
     justify-self: center;
+    align-self: center;
+    width: 70vw;
   }
 }
