--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -4,13 +4,31 @@
   line-height: 48px;
   padding-bottom: 8px;
   margin: 0;
-  display: inline-flex;
+  display: inline-block;
+  max-width: 500px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+
+@media screen and (max-width: 830px) {
+  .profile__title {
+    max-width: 50vw;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .profile__title {
+    max-width: 40vw;
+    font-size: 27px;
+    line-height: 33px;
+    text-align: center;
+  }
 }
 
 @media screen and (max-width: 600px) {
   .profile__title {
-    font-size: 27px;
-    line-height: 33px;
-    text-align: center;
+    max-width: 70vw;
   }
 }
