--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,6 +1,6 @@
 .profile {
   display: grid;
-  grid-template-columns: 120px 1fr 150px;
+  grid-template-columns: 120px 1fr minmax(50px, 150px);
   grid-template-areas:
   "avatar profile-info add-button";
   margin-top: 40px;
