--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -1,7 +1,7 @@
 .card__image {
   overflow: hidden;
-  min-height: 282px;
+  /*min-height: 282px;*/
   width: 100%;
-  height: 100%;
+  height: 282px;
   object-fit: cover;
 }
