--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,8 +1,7 @@
 .profile {
   display: grid;
-  grid-template-columns: 120px 1fr minmax(50px, 150px);
-  grid-template-areas:
-  "avatar profile-info add-button";
+  grid-template-columns: 120px minmax(250px, 1fr) minmax(100px, 150px);
+  grid-template-areas: "avatar profile-info add-button";
   margin-top: 40px;
   gap: 30px;
   align-items: center;
