--- a/pages/index.css
+++ b/pages/index.css
@@ -25,6 +25,7 @@
 
 @import "../blocks/card/card.css";
 @import "../blocks/card/__article/card__article.css";
+@import "../blocks/card/__trash/card__trash.css";
 @import "../blocks/card/__image/card__image.css";
 @import "../blocks/card/__caption/card__caption.css";
 @import "../blocks/card/__caption-title/card__caption-title.css";
@@ -42,4 +43,7 @@
 @import "../blocks/popup/__form-title/popup__form-title.css";
 @import "../blocks/popup/__input/__input.css";
 @import "../blocks/popup/__form-button/popup__form-button.css";
+@import "../blocks/popup/__image/popup__image.css";
+@import "../blocks/popup/__wrapper/popup__wrapper.css";
+@import "../blocks/popup/__image-caption/popup__image-caption.css";
 
