--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -6,8 +6,11 @@
   top: 0;
   width: 100%;
   height: 100%;
-  display: none;
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.2s, opacity 0.25s linear;
 }
