--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -6,17 +6,17 @@
   font-size: 14px;
   line-height: 17px;
   padding: 0 0 3px;
-  margin-bottom: 26px;
+  margin-top: 26px;
   border: none;
   border-bottom: solid 1px rgba(0, 0, 0, 0.2);
 }
 
-.popup__input:nth-child(2) {
-  margin-bottom: 48px;
+.popup__input:nth-child(1) {
+  margin-bottom: 0;
 }
 
 @media screen and (max-width: 600px) {
-  .popup__input:nth-child(2) {
+  .popup__input:nth-child(3) {
     margin-bottom: 44px;
   }
 }
