--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -1,4 +1,4 @@
-.popup__form-button {
+.popup__submit {
   background: black;
   color: white;
   font-size: 18px;
@@ -6,18 +6,18 @@
   text-align: center;
   border: none;
   border-radius: 2px;
-  margin: 0;
   padding: 14px 0;
   cursor: pointer;
   transition: opacity 0.3s;
+  margin: 48px 0 0;
 }
 
-.popup__form-button:hover {
+.popup__submit:hover {
   opacity: 0.8;
 }
 
 @media screen and (max-width: 460px) {
-  .popup__form-button {
+  .popup__submit {
     font-size: 14px;
     line-height: 18px;
   }
