--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,12 +1,11 @@
 .popup__input {
-  display: flex;
-  justify-items: end;
+  padding: 0;
+  box-sizing: border-box;
   min-height: 27px;
+  width: 100%;
   color: black;
   font-size: 14px;
   line-height: 17px;
-  padding: 0 0 3px;
-  margin-top: 26px;
   border: none;
   border-bottom: solid 1px rgba(0, 0, 0, 0.2);
 }
