--- a/pages/index.css
+++ b/pages/index.css
@@ -41,6 +41,7 @@
 @import "../blocks/popup/__button-close/popup__button-close.css";
 @import "../blocks/popup/__form/popup__form.css";
 @import "../blocks/popup/__form-title/popup__form-title.css";
+@import "../blocks/popup/__input-wrapper/popup__input-wrapper.css";
 @import "../blocks/popup/__input/popup__input.css";
 @import "../blocks/popup/__input-error/popup__input-error.css";
 @import "../blocks/popup/__input-error/_active/popup__input-error_active.css";
