--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,14 +1,8 @@
 .profile__avatar {
-  grid-area: avatar;
   border-radius: 50%;
-  max-width: 120px;
-  min-height: 120px;
+  width: 100%;
   object-fit: cover;
   object-position: center;
 }
 
-@media screen and (max-width: 600px) {
-  .profile__avatar {
-    justify-self: center;
-  }
-}
+
