--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -31,6 +31,8 @@
 @import "../blocks/card/__image/card__image.css";
 @import "../blocks/card/__caption/card__caption.css";
 @import "../blocks/card/__caption-title/card__caption-title.css";
+@import "../blocks/card/__like-wrapper/card__like-wrapper.css";
+@import "../blocks/card/__like-count/card__like-count.css";
 @import "../blocks/card/__button-like/card__button-like.css";
 @import "../blocks/card/__button-like/_active/card__button-like_active.css";
 
